add streamlit on cloud run

--- a/test_agent_builder.ipynb
+++ b/test_agent_builder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,8 @@
     "import google.auth.transport.requests\n",
     "from google.oauth2 import service_account\n",
     "import google.oauth2.id_token\n",
-    "import vertexai"
+    "import vertexai\n",
+    "import re"
    ]
   },
   {
@@ -250,93 +251,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0]The ThinkPad X1 Fold is an innovative, future-oriented reinterpretation of the classic notebook or laptop computer. Elegant in appearance, the 13.3&quot; OLED screen system folds down to a practical size of 7.2&quot; so that it can be carried easily like a small paper book.\n",
-      "[1]Product Name: HP Pavilion 15 x360; Product Category: Laptop; Product Description: Versatile applications and careful design are the hallmarks of the HP Pavilion 15 x360. It can be used in tent mode for watching videos, in tablet mode as a digital drawing pad and as a laptop it is a reliable working tool.\n",
-      "[2]The IdeaPad U430s also offers users a pleasing tactile experience due to a special surface finish that makes it feel soft and natural to the touch. In a highly inspired manner, the design of the IdeaPad U430s places the user centre-stage – it has emerged as a laptop with fascinatingly new qualities.\n",
-      "[3]An Nvidia Tegra 4 processor provides the required speed for an optimised graphics presentation. The notebook is 16 mm thin and weighs merely 1.7 kg. The device with its contemporary design is available in a range of vibrant colours.\n",
-      "[4]At first glance, the elegance of the Yoga 9i notebook is defined by its high-quality genuine leather cover. Unique in its texture from piece to piece, the purely organic material of leather clearly enhances the look of the notebook.\n",
-      "[5]Product Name: Raider GE78 HX; Product Category: Gaming Laptop; Product Description: Raider GE78 HX is a laptop designed specifically for the gaming market. It has advanced and professional gamers in its focus and offers correspondingly high-quality technical equipment.\n",
-      "[6]Product Name: ROG Zephyrus M16 GU604; Product Category: Gaming Laptop; Product Description: The ROG Zephyrus M16 GU604 gaming laptop is characterised by high performance and understated design. It has been given a valuable high-gloss polish contributing to the elegant look and making the device appear slimmer overall.\n",
-      "[7]Product Name: ASUS BR1100 Series; Product Category: Laptops; Product Description: The ASUS BR1100 series laptops are designed to be affordable and flexible for educational use. They are available in clamshell or 360-degree models to meet a wide range of requirements.\n",
-      "[8]Product Name: Google Pixelbook Go; Product Category: Laptop; Product Description: To meet user requirements for a lightweight, easily portable laptop for use underway, the Pixelbook Go has been equipped with a magnesium chassis that is only 13 mm thick and weighs just under 1 kg.\n",
-      "[9]Product Name: AORUS 15X; Product Category: Gaming Laptop; Product Description: With its contemporary technical features, the AORUS 15X gaming laptop has avid gamers in its sights. Its 15 chassis is less than 2.1 cm thick, making it easy to transport.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "reference = ''\n",
+    "sources_link = []\n",
     "for i in range(len(search['results'])):\n",
-    "    print(f\"[{i}]{search['results'][i]['document']['derivedStructData']['extractive_answers'][0]['content']}\")"
+    "    reference +=f\"[{i}]{search['results'][i]['document']['derivedStructData']['extractive_answers'][0]['content']}\\n\"\n",
+    "    gcs_uri = search['results'][i]['document']['derivedStructData']['link']\n",
+    "    # Extract data source\n",
+    "    source_exact = gcs_uri.replace(\"gs://\",\"https://storage.cloud.google.com/\")\n",
+    "    source_exact = source_exact.replace(\" \",\"%20\")\n",
+    "    sources_link.append(f\"[{i}]{source_exact} \\n\\n\")\n",
+    "sources_link_join = ''.join(sources_link)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'This is a test string with [1] in it.': True\n",
-      "'This string does not have the sequence.': False\n",
-      "'This one has [2] but not [1].': True\n"
+      "Text 1: True\n",
+      "Text 2: True\n",
+      "Text 3: True\n",
+      "Text 4: False\n"
      ]
     }
    ],
    "source": [
     "import re\n",
     "\n",
-    "def find_bracketed_one(text):\n",
-    "  \"\"\"\n",
-    "  Checks if the text contains '[1]'.\n",
+    "def check_numbered_sequence(text, limit):\n",
+    "    \"\"\"\n",
+    "    Checks if a text contains a numbered sequence like '[1]', '[2]', '[3]' up to a certain limit.\n",
     "\n",
-    "  Args:\n",
-    "    text: The input string to search in.\n",
+    "    Args:\n",
+    "        text: The input text string.\n",
+    "        limit: The upper limit of the numbered sequence.\n",
     "\n",
-    "  Returns:\n",
-    "    True if '[1]' is found, False otherwise.\n",
-    "  \"\"\"\n",
-    "  if re.search(r\"\\[1\\]\", text):\n",
+    "    Returns:\n",
+    "        True if the sequence is found up to the limit, False otherwise.\n",
+    "    \"\"\"\n",
+    "    for i in range(1, limit + 1):\n",
+    "        expected_pattern = r\"\\[\" + str(i) + r\"\\]\"\n",
+    "        if not re.search(expected_pattern, text):\n",
+    "            return False\n",
     "    return True\n",
-    "  else:\n",
-    "    return False\n",
     "\n",
     "# Example usage:\n",
-    "text1 = \"This is a test string with [1] in it.\"\n",
-    "text2 = \"This string does not have the sequence.\"\n",
-    "text3 = \"This one has [2] but not [1].\"\n",
-    "text4 = \"This one has [1] in the beginning.\"\n",
+    "text1 = \"This is a text with [1], [2], [3], [4], and [5].\"\n",
+    "limit1 = 5\n",
+    "print(f\"Text 1: {check_numbered_sequence(text1, limit1)}\")\n",
     "\n",
-    "print(f\"'{text1}': {find_bracketed_one(text1)}\")\n",
-    "print(f\"'{text2}': {find_bracketed_one(text2)}\")\n",
-    "print(f\"'{text3}': {find_bracketed_one(text3)}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "re.Match"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "re.search(r\"\\[1\\]\", text1)"
+    "text2 = \"This text has [1], [2], and [4], but is missing [3].\"\n",
+    "limit2 = 4\n",
+    "print(f\"Text 2: {check_numbered_sequence(text2, limit2)}\")\n",
+    "\n",
+    "text3 = \"This text has [1], [2], [3].\"\n",
+    "limit3 = 3\n",
+    "print(f\"Text 3: {check_numbered_sequence(text3, limit3)}\")\n",
+    "\n",
+    "text4 = \"This text has [1] and [2].\"\n",
+    "limit4 = 3\n",
+    "print(f\"Text 4: {check_numbered_sequence(text4, limit4)}\")"
    ]
   },
   {
