deleting commented code

--- a/secret_test.ipynb
+++ b/secret_test.ipynb
@@ -13,23 +13,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['GOOGLE_APPLICATION_CREDENTIALS'] = r\"C:\\Users\\ASUS\\Documents\\Job\\Datalabs\\2025\\service_account\\dla-gen-ai-specialization-a03e18685e07.json\" # Isi dengan Service Account\n"
+    "# os.environ['GOOGLE_APPLICATION_CREDENTIALS'] = r\"C:\\Users\\ASUS\\Documents\\Job\\Datalabs\\2025\\service_account\\dla-gen-ai-specialization-a03e18685e07.json\" # Isi dengan Service Account\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PROJECT_ID = \"844021890758\"\n",
-    "COLLECTION_NAME = \"default_collection\"\n",
-    "ENGINE_NAME = \"demo2-test_1736323106527\"\n",
-    "SECRET_ID_DB = \"db-secret\"\n"
+    "# PROJECT_ID = \"844021890758\"\n",
+    "# COLLECTION_NAME = \"default_collection\"\n",
+    "# ENGINE_NAME = \"demo2-test_1736323106527\"\n",
+    "# SECRET_ID_DB = \"db-secret\"\n"
    ]
   },
   {
